rust/libyrs.h


typedef struct YDoc {} YDoc;
typedef struct Branch {} Branch;
typedef struct YMapIter {} YMapIter;
typedef struct YXmlAttrIter {} YXmlAttrIter;
typedef struct YXmlTreeWalker {} YXmlTreeWalker;
typedef struct YUndoManager {} YUndoManager;
typedef struct YSubscription {} YSubscription;
typedef struct TransactionInner TransactionInner;
typedef YDoc YDoc;
typedef Branch Branch;
typedef union YOutputContent {
  uint8_t flag;
  double num;
  int64_t integer;
  char *str;
  const char *buf;
  struct YOutput *array;
  struct YMapEntry *map;
  Branch *y_type;
  YDoc *y_doc;
} YOutputContent;
typedef struct YOutput {
  int8_t tag;
  uint32_t len;
  union YOutputContent value;
} YOutput;
typedef struct YMapEntry {
  const char *key;
  const struct YOutput *value;
} YMapEntry;
typedef struct YXmlAttr {
  const char *name;
  const char *value;
} YXmlAttr;
typedef YSubscription YSubscription;
typedef struct YAfterTransactionEvent {
  struct YStateVector before_state;
  struct YStateVector after_state;
  struct YDeleteSet delete_set;
} YAfterTransactionEvent;
typedef struct YSubdocsEvent {
  uint32_t added_len;
  uint32_t removed_len;
  uint32_t loaded_len;
  YDoc **added;
  YDoc **removed;
  YDoc **loaded;
} YSubdocsEvent;
typedef struct TransactionInner YTransaction;
typedef union YInputContent {
  uint8_t flag;
  double num;
  int64_t integer;
  char *str;
  char *buf;
  struct YInput *values;
  struct YMapInputData map;
  YDoc *doc;
  const Weak *weak;
} YInputContent;
typedef struct YInput {
  int8_t tag;
  uint32_t len;
  union YInputContent value;
} YInput;
typedef struct YTextEvent {
  const void *inner;
  const TransactionMut *txn;
} YTextEvent;
typedef struct YMapEvent {
  const void *inner;
  const TransactionMut *txn;
} YMapEvent;
typedef struct YArrayEvent {
  const void *inner;
  const TransactionMut *txn;
} YArrayEvent;
typedef struct YXmlEvent {
  const void *inner;
  const TransactionMut *txn;
} YXmlEvent;
typedef struct YXmlTextEvent {
  const void *inner;
  const TransactionMut *txn;
} YXmlTextEvent;
typedef struct YWeakLinkEvent {
  const void *inner;
  const TransactionMut *txn;
} YWeakLinkEvent;
typedef struct YEvent {
  int8_t tag;
  union YEventContent content;
} YEvent;
typedef struct YUndoEvent {
  char kind;
  const char *origin;
  uint32_t origin_len;
  void *meta;
} YUndoEvent;
void ymap_entry_destroy(struct YMapEntry *value);
void yxmlattr_destroy(struct YXmlAttr *attr);
void ystring_destroy(char *str);
YSubscription *ydoc_observe_updates_v1(YDoc *doc, void *state, void (*cb)(void*,
                                                                          uint32_t,
                                                                          const char*,
                                                                          uint32_t,
                                                                          const char*));
YSubscription *ydoc_observe_updates_v2(YDoc *doc, void *state, void (*cb)(void*,
                                                                          uint32_t,
                                                                          const char*));
YSubscription *ydoc_observe_after_transaction(YDoc *doc,
                                              void *state,
                                              void (*cb)(void*, struct YAfterTransactionEvent*));
YSubscription *ydoc_observe_subdocs(YDoc *doc,
                                    void *state,
                                    void (*cb)(void*, struct YSubdocsEvent*));
YSubscription *ydoc_observe_clear(YDoc *doc, void *state, void (*cb)(void*, YDoc*));
struct YMapEntry *ymap_iter_next(YMapIter *iter);
uint32_t ymap_len(const Branch *map, const YTransaction *txn);
void ymap_insert(const Branch *map, YTransaction *txn, const char *key, const struct YInput *value);
uint8_t ymap_remove(const Branch *map, YTransaction *txn, const char *key);
struct YOutput *ymap_get(const Branch *map, const YTransaction *txn, const char *key);
char *ymap_get_json(const Branch *map, const YTransaction *txn, const char *key);
void ymap_remove_all(const Branch *map, YTransaction *txn);
char *yxmlelem_tag(const Branch *xml);
char *yxmlelem_string(const Branch *xml, const YTransaction *txn);
void yxmlelem_insert_attr(const Branch *xml,
                          YTransaction *txn,
                          const char *attr_name,
                          const char *attr_value);
void yxmlelem_remove_attr(const Branch *xml, YTransaction *txn, const char *attr_name);
char *yxmlelem_get_attr(const Branch *xml, const YTransaction *txn, const char *attr_name);
YXmlAttrIter *yxmlelem_attr_iter(const Branch *xml, const YTransaction *txn);
YXmlAttrIter *yxmltext_attr_iter(const Branch *xml, const YTransaction *txn);
void yxmlattr_iter_destroy(YXmlAttrIter *iterator);
struct YXmlAttr *yxmlattr_iter_next(YXmlAttrIter *iterator);
struct YOutput *yxml_next_sibling(const Branch *xml, const YTransaction *txn);
struct YOutput *yxml_prev_sibling(const Branch *xml, const YTransaction *txn);
Branch *yxmlelem_parent(const Branch *xml);
uint32_t yxmlelem_child_len(const Branch *xml, const YTransaction *txn);
struct YOutput *yxmlelem_first_child(const Branch *xml);
YXmlTreeWalker *yxmlelem_tree_walker(const Branch *xml, const YTransaction *txn);
void youtput_destroy(struct YOutput *val);
YSubscription *ytext_observe(const Branch *txt, void *state, void (*cb)(void*,
                                                                        const struct YTextEvent*,
                                                                        uint32_t,
                                                                        const char*));
YSubscription *ymap_observe(const Branch *map, void *state, void (*cb)(void*,
                                                                       const struct YMapEvent*));
YSubscription *yarray_observe(const Branch *array,
                              void *state,
                              void (*cb)(void*, const struct YArrayEvent*));
YSubscription *yxmlelem_observe(const Branch *xml,
                                void *state,
                                void (*cb)(void*, const struct YXmlEvent*));
YSubscription *yxmltext_observe(const Branch *xml,
                                void *state,
                                void (*cb)(void*, const struct YXmlTextEvent*));
YSubscription *yobserve_deep(Branch *ytype, void *state, void (*cb)(void*,
                                                                    uint32_t,
                                                                    const struct YEvent*));
YSubscription *yundo_manager_observe_added(YUndoManager *mgr,
                                           void *state,
                                           void (*callback)(void*, const struct YUndoEvent*));
YSubscription *yundo_manager_observe_popped(YUndoManager *mgr,
                                            void *state,
                                            void (*callback)(void*, const struct YUndoEvent*));
YSubscription *yweak_observe(const Branch *weak,
                             void *state,
                             void (*cb)(void*, const struct YWeakLinkEvent*));