lib/y_dart/ffi/y_dart_bindings_generated.dart


/// Moves current `YMap` iterator over to a next entry, returning a pointer to it. If an iterator
/// comes to an end of a map, a null pointer will be returned. Yrs maps are unordered and so are
/// their iterators.
///
/// Returned values should be eventually released using [ymap_entry_destroy] function.
@ffi.Native<ffi.Pointer<YMapEntry> Function(ffi.Pointer<YMapIter>)>(
    symbol: 'ymap_iter_next', assetId: 'package:y_dart/y_dart')
external ffi.Pointer<YMapEntry> ymap_iter_next(
  ffi.Pointer<YMapIter> iter,
);

/// Returns a number of entries stored within a `map`.
@ffi.Native<
        ffi.Uint32 Function(ffi.Pointer<Branch>, ffi.Pointer<YTransaction>)>(
    symbol: 'ymap_len', assetId: 'package:y_dart/y_dart')
external int ymap_len(
  ffi.Pointer<Branch> map,
  ffi.Pointer<YTransaction> txn,
);

/// Inserts a new entry (specified as `key`-`value` pair) into a current `map`. If entry under such
/// given `key` already existed, its corresponding value will be replaced.
///
/// A `key` must be a null-terminated UTF-8 encoded string, which contents will be copied into
/// a `map` (therefore it must be freed by the function caller).
///
/// A `value` content is being copied into a `map`, therefore any of its content must be freed by
/// the function caller.
@ffi.Native<
        ffi.Void Function(ffi.Pointer<Branch>, ffi.Pointer<YTransaction>,
            ffi.Pointer<ffi.Char>, ffi.Pointer<YInput>)>(
    symbol: 'ymap_insert', assetId: 'package:y_dart/y_dart')
external void ymap_insert(
  ffi.Pointer<Branch> map,
  ffi.Pointer<YTransaction> txn,
  ffi.Pointer<ffi.Char> key,
  ffi.Pointer<YInput> value,
);

/// Removes a `map` entry, given its `key`. Returns `1` if the corresponding entry was successfully
/// removed or `0` if no entry with a provided `key` has been found inside of a `map`.
///
/// A `key` must be a null-terminated UTF-8 encoded string.
@ffi.Native<
        ffi.Uint8 Function(ffi.Pointer<Branch>, ffi.Pointer<YTransaction>,
            ffi.Pointer<ffi.Char>)>(
    symbol: 'ymap_remove', assetId: 'package:y_dart/y_dart')
external int ymap_remove(
  ffi.Pointer<Branch> map,
  ffi.Pointer<YTransaction> txn,
  ffi.Pointer<ffi.Char> key,
);

/// Returns a value stored under the provided `key`, or a null pointer if no entry with such `key`
/// has been found in a current `map`. A returned value is allocated by this function and therefore
/// should be eventually released using [youtput_destroy] function.
///
/// A `key` must be a null-terminated UTF-8 encoded string.
@ffi.Native<
        ffi.Pointer<YOutput> Function(ffi.Pointer<Branch>,
            ffi.Pointer<YTransaction>, ffi.Pointer<ffi.Char>)>(
    symbol: 'ymap_get', assetId: 'package:y_dart/y_dart')
external ffi.Pointer<YOutput> ymap_get(
  ffi.Pointer<Branch> map,
  ffi.Pointer<YTransaction> txn,
  ffi.Pointer<ffi.Char> key,
);

/// Returns a value stored under the provided `key` as UTF-8 encoded, NULL-terminated JSON string.
/// Once not needed that string should be deallocated using `ystring_destroy`.
///
/// This method will return `NULL` pointer if value was not found or value couldn't be serialized
/// into JSON string.
///
/// This method will also try to serialize complex types that don't have native JSON representation
/// like YMap, YArray, YText etc. in such cases their contents will be materialized into JSON values.
@ffi.Native<
        ffi.Pointer<ffi.Char> Function(ffi.Pointer<Branch>,
            ffi.Pointer<YTransaction>, ffi.Pointer<ffi.Char>)>(
    symbol: 'ymap_get_json', assetId: 'package:y_dart/y_dart')
external ffi.Pointer<ffi.Char> ymap_get_json(
  ffi.Pointer<Branch> map,
  ffi.Pointer<YTransaction> txn,
  ffi.Pointer<ffi.Char> key,
);

/// Removes all entries from a current `map`.
@ffi.Native<ffi.Void Function(ffi.Pointer<Branch>, ffi.Pointer<YTransaction>)>(
    symbol: 'ymap_remove_all', assetId: 'package:y_dart/y_dart')
external void ymap_remove_all(
  ffi.Pointer<Branch> map,
  ffi.Pointer<YTransaction> txn,
);

/// Return a name (or an XML tag) of a current `YXmlElement`. Root-level XML nodes use "UNDEFINED" as
/// their tag names.
///
/// Returned value is a null-terminated UTF-8 string, which must be released using [ystring_destroy]
/// function.
@ffi.Native<ffi.Pointer<ffi.Char> Function(ffi.Pointer<Branch>)>(
    symbol: 'yxmlelem_tag', assetId: 'package:y_dart/y_dart')
external ffi.Pointer<ffi.Char> yxmlelem_tag(
  ffi.Pointer<Branch> xml,
);

/// Converts current `YXmlElement` together with its children and attributes into a flat string
/// representation (no padding) eg. `<UNDEFINED><title key="value">sample text</title></UNDEFINED>`.
///
/// Returned value is a null-terminated UTF-8 string, which must be released using [ystring_destroy]
/// function.
@ffi.Native<
        ffi.Pointer<ffi.Char> Function(
            ffi.Pointer<Branch>, ffi.Pointer<YTransaction>)>(
    symbol: 'yxmlelem_string', assetId: 'package:y_dart/y_dart')
external ffi.Pointer<ffi.Char> yxmlelem_string(
  ffi.Pointer<Branch> xml,
  ffi.Pointer<YTransaction> txn,
);

/// Inserts an XML attribute described using `attr_name` and `attr_value`. If another attribute with
/// the same name already existed, its value will be replaced with a provided one.
///
/// Both `attr_name` and `attr_value` must be a null-terminated UTF-8 encoded strings. Their
/// contents are being copied, therefore it's up to a function caller to properly release them.
@ffi.Native<
        ffi.Void Function(ffi.Pointer<Branch>, ffi.Pointer<YTransaction>,
            ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)>(
    symbol: 'yxmlelem_insert_attr', assetId: 'package:y_dart/y_dart')
external void yxmlelem_insert_attr(
  ffi.Pointer<Branch> xml,
  ffi.Pointer<YTransaction> txn,
  ffi.Pointer<ffi.Char> attr_name,
  ffi.Pointer<ffi.Char> attr_value,
);

/// Removes an attribute from a current `YXmlElement`, given its name.
///
/// An `attr_name`must be a null-terminated UTF-8 encoded string.
@ffi.Native<
        ffi.Void Function(ffi.Pointer<Branch>, ffi.Pointer<YTransaction>,
            ffi.Pointer<ffi.Char>)>(
    symbol: 'yxmlelem_remove_attr', assetId: 'package:y_dart/y_dart')
external void yxmlelem_remove_attr(
  ffi.Pointer<Branch> xml,
  ffi.Pointer<YTransaction> txn,
  ffi.Pointer<ffi.Char> attr_name,
);

/// Returns the value of a current `YXmlElement`, given its name, or a null pointer if not attribute
/// with such name has been found. Returned pointer is a null-terminated UTF-8 encoded string, which
/// should be released using [ystring_destroy] function.
///
/// An `attr_name` must be a null-terminated UTF-8 encoded string.
@ffi.Native<
        ffi.Pointer<ffi.Char> Function(ffi.Pointer<Branch>,
            ffi.Pointer<YTransaction>, ffi.Pointer<ffi.Char>)>(
    symbol: 'yxmlelem_get_attr', assetId: 'package:y_dart/y_dart')
external ffi.Pointer<ffi.Char> yxmlelem_get_attr(
  ffi.Pointer<Branch> xml,
  ffi.Pointer<YTransaction> txn,
  ffi.Pointer<ffi.Char> attr_name,
);

/// Returns an iterator over the `YXmlElement` attributes.
///
/// Use [yxmlattr_iter_next] function in order to retrieve a consecutive (**unordered**) attributes.
/// Use [yxmlattr_iter_destroy] function in order to close the iterator and release its resources.
@ffi.Native<
        ffi.Pointer<YXmlAttrIter> Function(
            ffi.Pointer<Branch>, ffi.Pointer<YTransaction>)>(
    symbol: 'yxmlelem_attr_iter', assetId: 'package:y_dart/y_dart')
external ffi.Pointer<YXmlAttrIter> yxmlelem_attr_iter(
  ffi.Pointer<Branch> xml,
  ffi.Pointer<YTransaction> txn,
);

/// Returns an iterator over the `YXmlText` attributes.
///
/// Use [yxmlattr_iter_next] function in order to retrieve a consecutive (**unordered**) attributes.
/// Use [yxmlattr_iter_destroy] function in order to close the iterator and release its resources.
@ffi.Native<
        ffi.Pointer<YXmlAttrIter> Function(
            ffi.Pointer<Branch>, ffi.Pointer<YTransaction>)>(
    symbol: 'yxmltext_attr_iter', assetId: 'package:y_dart/y_dart')
external ffi.Pointer<YXmlAttrIter> yxmltext_attr_iter(
  ffi.Pointer<Branch> xml,
  ffi.Pointer<YTransaction> txn,
);

/// Releases all of attributes iterator resources created by calling [yxmlelem_attr_iter]
/// or [yxmltext_attr_iter].
@ffi.Native<ffi.Void Function(ffi.Pointer<YXmlAttrIter>)>(
    symbol: 'yxmlattr_iter_destroy', assetId: 'package:y_dart/y_dart')
external void yxmlattr_iter_destroy(
  ffi.Pointer<YXmlAttrIter> iterator,
);

/// Returns a next XML attribute from an `iterator`. Attributes are returned in an unordered
/// manner. Once `iterator` reaches the end of attributes collection, a null pointer will be
/// returned.
///
/// Returned value should be eventually released using [yxmlattr_destroy].
@ffi.Native<ffi.Pointer<YXmlAttr> Function(ffi.Pointer<YXmlAttrIter>)>(
    symbol: 'yxmlattr_iter_next', assetId: 'package:y_dart/y_dart')
external ffi.Pointer<YXmlAttr> yxmlattr_iter_next(
  ffi.Pointer<YXmlAttrIter> iterator,
);

/// Returns a next sibling of a current XML node, which can be either another `YXmlElement`
/// or a `YXmlText`. Together with [yxmlelem_first_child] it may be used to iterate over the direct
/// children of an XML node (in order to iterate over the nested XML structure use
/// [yxmlelem_tree_walker]).
///
/// If current `YXmlElement` is the last child, this function returns a null pointer.
/// A returned value should be eventually released using [youtput_destroy] function.
@ffi.Native<
        ffi.Pointer<YOutput> Function(
            ffi.Pointer<Branch>, ffi.Pointer<YTransaction>)>(
    symbol: 'yxml_next_sibling', assetId: 'package:y_dart/y_dart')
external ffi.Pointer<YOutput> yxml_next_sibling(
  ffi.Pointer<Branch> xml,
  ffi.Pointer<YTransaction> txn,
);

/// Returns a previous sibling of a current XML node, which can be either another `YXmlElement`
/// or a `YXmlText`.
///
/// If current `YXmlElement` is the first child, this function returns a null pointer.
/// A returned value should be eventually released using [youtput_destroy] function.
@ffi.Native<
        ffi.Pointer<YOutput> Function(
            ffi.Pointer<Branch>, ffi.Pointer<YTransaction>)>(
    symbol: 'yxml_prev_sibling', assetId: 'package:y_dart/y_dart')
external ffi.Pointer<YOutput> yxml_prev_sibling(
  ffi.Pointer<Branch> xml,
  ffi.Pointer<YTransaction> txn,
);

/// Returns a parent `YXmlElement` of a current node, or null pointer when current `YXmlElement` is
/// a root-level shared data type.
@ffi.Native<ffi.Pointer<Branch> Function(ffi.Pointer<Branch>)>(
    symbol: 'yxmlelem_parent', assetId: 'package:y_dart/y_dart')
external ffi.Pointer<Branch> yxmlelem_parent(
  ffi.Pointer<Branch> xml,
);

/// Returns a number of child nodes (both `YXmlElement` and `YXmlText`) living under a current XML
/// element. This function doesn't count a recursive nodes, only direct children of a current node.
@ffi.Native<
        ffi.Uint32 Function(ffi.Pointer<Branch>, ffi.Pointer<YTransaction>)>(
    symbol: 'yxmlelem_child_len', assetId: 'package:y_dart/y_dart')
external int yxmlelem_child_len(
  ffi.Pointer<Branch> xml,
  ffi.Pointer<YTransaction> txn,
);

/// Returns a first child node of a current `YXmlElement`, or null pointer if current XML node is
/// empty. Returned value could be either another `YXmlElement` or `YXmlText`.
///
/// A returned value should be eventually released using [youtput_destroy] function.
@ffi.Native<ffi.Pointer<YOutput> Function(ffi.Pointer<Branch>)>(
    symbol: 'yxmlelem_first_child', assetId: 'package:y_dart/y_dart')
external ffi.Pointer<YOutput> yxmlelem_first_child(
  ffi.Pointer<Branch> xml,
);
